--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,10 @@
-<div class="comment">
-  <h3>Comment <%= comment.id %>:</h3>
-  <p><%= comment.body %></p>
-  <div class="reply">
-    <%= render comment.replies %>
+<% cache comment do %>
+  <div class="comment">
+    <h3>Comment <%= comment.id %>:</h3>
+    <p><%= comment.body %></p>
+    <div class="reply">
+      <h4>Reply <%= comment.replies.first.id %>:</h4>
+      <p><%= comment.replies.first.body %></p>
+    </div>
   </div>
-</div>
+<% end %>
